Bug fix: enemies could damage other enemies and player couldn't die.